...
    sampleTeams: [
      SampleTeam(name: 'Mega Metagross (Worlds 2026)', paste: _metagrossPaste),
      SampleTeam(
        name: 'Rillaboom / Sneasler Grassy Offense',
        paste: _grassyPaste,
      ),
      SampleTeam(name: 'Big Six', paste: _bigSixPaste),
    ],
  );
}

const _metagrossPaste = '''
Kingambit @ Chople Berry
...
